Filtraciones realizadas, creditos creado

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -36,6 +36,9 @@
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
           </li>
+          <li>
+            <a href="creditos.html" class="nav__link">Créditos</a>
+          </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
         </ul>
 
@@ -76,6 +79,9 @@
               <a href="sobre_nosotros.html" class="nav__link link__down"
                 >Sobre Nosotros</a
               >
+            </li>
+            <li>
+              <a href="creditos.html" class="nav__link link__down">Créditos</a>
             </li>
           </ul>
 
