--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
               >Habitaciones</a
             >
           </li>
+          <li>
+            <a href="./pages/creditos.html" class="nav__link"
+              >Créditos</a
+            >
+          </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
         </ul>
 
@@ -76,6 +81,10 @@
                 >Sobre Nosotros</a
               >
             </li>
+              <li>
+            <a href="./pages/creditos.html" class="nav__link link__down"
+              >Créditos</a>
+          </li>
           </ul>
 
           <ul class="list__down list__down--right display-none">
