--- a/pages/historias.html
+++ b/pages/historias.html
@@ -30,6 +30,9 @@
           <li>
             <a href="habitaciones.html" class="nav__link">Habitaciones</a>
           </li>
+          <li>
+            <a href="creditos.html" class="nav__link">Créditos</a>
+          </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
         </ul>
 
@@ -70,6 +73,9 @@
               <a href="sobre_nosotros.html" class="nav__link link__down"
                 >Sobre Nosotros</a
               >
+            </li>
+            <li>
+              <a href="creditos.html" class="nav__link link__down">Créditos</a>
             </li>
           </ul>
 
