Avances con la integracion del login

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       content="Hotel el Ensueño Dorado, distinguido por su elegancia y gran alojamiento, reserva y disfruta de una gran experiencia."
     />
     <title>Hotel el Ensueño Dorado</title>
+    <link rel="icon" href="./media/imgs/LOGO_HOTEL 4.png" type="image/x-icon">
+
     <link rel="stylesheet" href="./css/styles.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="./scripts/index.js" defer></script>
@@ -32,11 +34,7 @@
           <li>
             <a href="./pages/historias.html" class="nav__link">Empleados</a>
           </li>
-          <li>
-            <a href="./pages/habitaciones.html" class="nav__link"
-              >Habitaciones</a
-            >
-          </li>
+
           <li>
             <a href="./pages/creditos.html" class="nav__link"
               >Créditos</a
@@ -71,11 +69,7 @@
                 >Empleados</a
               >
             </li>
-            <li>
-              <a href="./pages/habitaciones.html" class="nav__link link__down"
-                >Habitaciones</a
-              >
-            </li>
+
             <li>
               <a href="./pages/sobre_nosotros.html" class="nav__link link__down"
                 >Sobre Nosotros</a
@@ -109,7 +103,7 @@
             <h1 class="principal__title">Hotel con hospitalidad auténtica</h1>
           </article>
           <div data-aos="fade-right">  
-            <a href="#" class="principal__link">RESERVAR AHORA</a>
+            <a href="./pages/login.html" class="principal__link">RESERVAR AHORA</a>
           </div>
           </div>
       </section>
@@ -153,7 +147,7 @@
               </p>
               <div class="link__room--container">
                 <div class="hr__dark"></div>
-                <a href="#" class="rooms__link">Ver Habitaciones</a>
+                <a href="#" class="rooms__link">Ver más</a>
               </div>
             </div>
           </article>
