--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -25,9 +25,6 @@
           </li>
           <li><a href="historias.html" class="nav__link">Empleados</a></li>
           <li>
-            <a href="habitaciones.html" class="nav__link">Habitaciones</a>
-          </li>
-          <li>
             <a href="creditos.html" class="nav__link">Créditos</a>
           </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
@@ -59,11 +56,6 @@
             <li>
               <a href="historias.html" class="nav__link link__down"
                 >Empleados</a
-              >
-            </li>
-            <li>
-              <a href="habitaciones.html" class="nav__link link__down"
-                >Habitaciones</a
               >
             </li>
             <li>
@@ -202,6 +194,59 @@
           <!-- Habitaciones Javascript -->
         </section>
       </section>
+      <div class="overlay display-none" id="contenedorReservas">
+        <div class="container">
+          <div class="form-section">
+            <h2>Reservación</h2>
+            <form>
+              <div class="form-group">
+                <input
+                  type="text"
+                  placeholder="Nombre"
+                  name="nombre"
+                  class="input--reservar"
+                  required
+                />
+                <input
+                  type="text"
+                  placeholder="Apellido"
+                  name="apellido"
+                  class="input--reservar"
+                  required
+                />
+              </div>
+              <input
+                type="text"
+                placeholder="Número de Identificación"
+                name="id"
+                class="input--reservar"
+                required
+              />
+              <input
+                type="email"
+                placeholder="Correo Electrónico"
+                name="correo"
+                class="input--reservar"
+                required
+              />
+              <input
+                type="number"
+                placeholder="Días a Hospedarse"
+                class="input--reservar"
+                name="dias"
+                required
+              />
+              <button type="submit">Confirmar reserva</button>
+            </form>
+          </div>
+          <div class="sidebar">
+            <h3>Tu selección</h3>
+            <p><strong>Habitación N°</strong> 305</p>
+            <p><strong>Total a pagar</strong> €1.250,00</p>
+            <img src="../media/imgs/LOGO_HOTEL 4.png" alt="Logo del hotel" />
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <section class="footer__content">
