--- a/pages/login.html
+++ b/pages/login.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>El Ensueño Dorado - Salas</title>
+    <title>Login - Hotel</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <script src="../scripts/index.js" defer></script>
+    <link href="../css/styles.css" />
   </head>
-  <body>
+
+  <body class="login-page">
     <header>
       <a href="../index.html" class="header__logo-link">
         <img
@@ -83,115 +84,23 @@
         </nav>
       </nav>
     </header>
-    <div class="black-curtain" id="menuOverlay"></div>
 
-    <main class="main-sala">
-      <section class="sala-section">
-        <img
-          src="../media/imgs/lobby.webp"
-          alt="Lobby del hotel"
-          class="sala-image"
-        />
-        <div class="sala-text">
-          <h2 class="sala-title">Lobby</h2>
-          <p class="sala-descripcion">
-            Un espacio amplio y elegante para recibirte con comodidad. Nuestro
-            lobby combina diseño moderno con un ambiente acogedor para que tu
-            experiencia comience desde el primer momento.
-          </p>
-        </div>
-      </section>
+    <main class="login-main">
+      <section class="login-container">
+        <h1 class="login-title">Iniciar Sesión</h1>
 
-      <section class="sala-section">
-        <img
-          src="../media/imgs/restaurante.webp"
-          alt="Restaurante del hotel"
-          class="sala-image"
-        />
-        <div class="sala-text">
-          <h2 class="sala-title">Restaurante</h2>
-          <p class="sala-descripcion">
-            Disfruta de una experiencia culinaria de primer nivel con platos
-            locales e internacionales. Nuestro restaurante ofrece un ambiente
-            sofisticado y sabores únicos.
-          </p>
-        </div>
-      </section>
+        <form class="login-form">
+          <label for="usuario">Usuario</label>
+          <input type="text" name="usuario" id="usuario" required />
 
-      <section class="sala-section">
-        <img
-          src="../media/imgs/sala_juegos.webp"
-          alt="Sala de juegos"
-          class="sala-image"
-        />
-        <div class="sala-text">
-          <h2 class="sala-title">Sala de Juegos</h2>
-          <p class="sala-descripcion">
-            Diversión asegurada para grandes y chicos. Contamos con consolas,
-            mesa de billar, futbolín y más, en un entorno cómodo y entretenido.
-          </p>
-        </div>
-      </section>
+          <label for="contrasena">Contraseña</label>
+          <input type="password" name="contrasena" id="contrasena" required />
 
-      <section class="sala-section">
-        <img
-          src="../media/imgs/bar.webp"
-          alt="Bar del hotel"
-          class="sala-image"
-        />
-        <div class="sala-text">
-          <h2 class="sala-title">Bar</h2>
-          <p class="sala-descripcion">
-            Relájate con nuestra amplia selección de cócteles, vinos y bebidas
-            en un ambiente sofisticado y tranquilo. Ideal para cerrar el día con
-            estilo.
+          <button type="submit" class="login-btn">Ingresar</button>
+          <p class="login-link">
+            ¿No tienes cuenta? <a href="#">Regístrate aquí</a>
           </p>
-        </div>
-      </section>
-      <section class="sala-section">
-        <img
-          src="../media/imgs/spa.webp"
-          alt="Spa del Hotel"
-          class="sala-image"
-        />
-        <div class="sala-text">
-          <h2 class="sala-title">Spa</h2>
-          <p class="sala-descripcion">
-            Un oasis de relajación donde podrás disfrutar de tratamientos
-            corporales, faciales y acceso a sauna y jacuzzi, pensado para
-            renovar tu energía.
-          </p>
-        </div>
-      </section>
-
-      <section class="sala-section">
-        <img
-          src="../media/imgs/sala_masajes.webp"
-          alt="Sala de Masajes"
-          class="sala-image"
-        />
-        <div class="sala-text">
-          <h2 class="sala-title">Sala de Masajes</h2>
-          <p class="sala-descripcion">
-            Nuestro personal calificado te brinda masajes relajantes y
-            terapéuticos en un ambiente tranquilo. Ideal para liberar el estrés
-            y mejorar tu bienestar.
-          </p>
-        </div>
-      </section>
-      <section class="sala-section">
-        <img
-          src="../media/imgs/gimnasio.webp"
-          alt="Gimnasio del Hotel"
-          class="sala-image"
-        />
-        <div class="sala-text">
-          <h2 class="sala-title">Gimnasio</h2>
-          <p class="sala-descripcion">
-            Mantente en forma durante tu estadía. Nuestro gimnasio está equipado
-            con máquinas modernas para entrenamiento cardiovascular y de fuerza.
-          </p>
-        </div>
+        </form>
       </section>
     </main>
 
@@ -242,5 +151,82 @@
         />
       </article>
     </footer>
+
+    <script>
+      const usuarioPrueba = {
+        usuario: "admin",
+        contrasena: "1234",
+      };
+
+      let usuarios = JSON.parse(localStorage.getItem("usuarios")) || [];
+
+      const yaExiste = usuarios.some(
+        (u) => u.usuario === usuarioPrueba.usuario
+      );
+
+      if (!yaExiste) {
+        usuarios.push(usuarioPrueba);
+        localStorage.setItem("usuarios", JSON.stringify(usuarios));
+        console.log("Usuario de prueba guardado en localStorage: admin / 1234");
+      }
+      function registrarUsuario(usuario, contrasena) {
+        const usuarios = JSON.parse(localStorage.getItem("usuarios")) || [];
+
+        if (usuarios.find((u) => u.usuario === usuario)) {
+          return false;
+        }
+
+        usuarios.push({ usuario, contrasena });
+        localStorage.setItem("usuarios", JSON.stringify(usuarios));
+        return true;
+      }
+
+      function loginUsuario(usuario, contrasena) {
+        const usuarios = JSON.parse(localStorage.getItem("usuarios")) || [];
+        return usuarios.find(
+          (u) => u.usuario === usuario && u.contrasena === contrasena
+        );
+      }
+
+      document
+        .querySelector(".login-form")
+        .addEventListener("submit", function (e) {
+          e.preventDefault();
+          const usuario = document.getElementById("usuario").value.trim();
+          const contrasena = document.getElementById("contrasena").value;
+
+          const usuarioValido = loginUsuario(usuario, contrasena);
+
+          if (usuarioValido) {
+            alert(`Bienvenido, ${usuario}!`);
+            window.location.href = "habitaciones.html";
+          } else {
+            alert("Usuario o contraseña incorrecta.");
+          }
+
+          this.reset();
+        });
+
+      document
+        .querySelector(".login-link a")
+        .addEventListener("click", function (e) {
+          e.preventDefault();
+
+          const usuario = prompt("Ingresa un nombre de usuario:");
+          const contrasena = prompt("Ingresa una contraseña:");
+
+          if (usuario && contrasena) {
+            const exito = registrarUsuario(usuario.trim(), contrasena);
+
+            if (exito) {
+              alert("Usuario registrado con éxito. Ya puedes iniciar sesión.");
+            } else {
+              alert("El usuario ya existe. Prueba con otro nombre.");
+            }
+          } else {
+            alert("Debes llenar ambos campos para registrarte.");
+          }
+        });
+    </script>
   </body>
 </html>
