--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </article>
         <article class="flex--col">
           <h2 class="footer__subtitle">Encuéntranos</h2>
-          <p class="footer__text">Cra 54 Calle 70-10.</p>
+          <p class="footer__text">Cra 50 #82-148, Nte. Centro</p>
           <p class="footer__text">Barranquilla, Atlántico, Colombia.</p>
         </article>
         <article class="flex--col">
