Modal reservaciones implementada

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -197,6 +197,12 @@
       <div class="overlay display-none" id="contenedorReservas">
         <div class="container">
           <div class="form-section">
+            <img
+              src="../media/icons/close.svg"
+              alt="Cerrar menú"
+              class="reserva__cerrar"
+              id="cerrarReseva"
+            />
             <h2>Reservación</h2>
             <form>
               <div class="form-group">
