Boton reservar añadido al header

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             >
           </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
+          <li>
+            <a href="./pages/login.html" class="principal__link principal__link--header ">RESERVAR AHORA</a>
+          </li>
+
         </ul>
 
         <!-- Menú que aparece con hover -->
@@ -92,6 +96,7 @@
 
             <li><a href="./pages/restaurante.html" class="nav__link link__down">Restaurantes</a></li>
           </ul>
+
         </nav>
       </nav>
     </header>
@@ -147,7 +152,7 @@
               </p>
               <div class="link__room--container">
                 <div class="hr__dark"></div>
-                <a href="#" class="rooms__link">Ver más</a>
+                <button class="propuesta__boton">Ver Habitaciones</button>
               </div>
             </div>
           </article>
