Implementado boton reservar header en todas las paginas

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -37,6 +37,13 @@
             <a href="creditos.html" class="nav__link">Créditos</a>
           </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
+          <li>
+            <a
+              href="../pages/login.html"
+              class="principal__link principal__link--header"
+              >RESERVAR AHORA</a
+            >
+          </li>
         </ul>
 
         <!-- Menú que aparece con hover -->
