--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -8,6 +8,11 @@
       content="Hotel el Ensueño Dorado, distinguido por su elegancia y gran alojamiento, reserva y disfruta de una gran experiencia."
     />
     <title>Hotel el Ensueño Dorado</title>
+    <link
+      rel="icon"
+      href="../media/imgs/LOGO_HOTEL 4.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../scripts/index.js" defer></script>
   </head>
@@ -32,9 +37,7 @@
           </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
           <li>
-            <a
-              href="./pages/login.html"
-              class="principal__link principal__link--header"
+            <a href="login.html" class="principal__link principal__link--header"
               >RESERVAR AHORA</a
             >
           </li>
