--- a/pages/historia_empleados.html
+++ b/pages/historia_empleados.html
@@ -9,6 +9,12 @@
     />
     <link rel="icon" href="../media/imgs/Icono.ico" />
     <title>Hotel el Ensueño Dorado</title>
+    <link
+      rel="icon"
+      href="../media/imgs/LOGO_HOTEL 4.png"
+      type="image/x-icon"
+    />
+
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../scripts/index.js" defer></script>
   </head>
@@ -33,9 +39,7 @@
           </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
           <li>
-            <a
-              href="../pages/login.html"
-              class="principal__link principal__link--header"
+            <a href="login.html" class="principal__link principal__link--header"
               >RESERVAR AHORA</a
             >
           </li>
