--- a/pages/login.html
+++ b/pages/login.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Hotel</title>
+    <link
+      rel="icon"
+      href="../media/imgs/LOGO_HOTEL 4.png"
+      type="image/x-icon"
+    />
+
     <link rel="stylesheet" href="../css/styles.css" />
     <link href="../css/styles.css" />
   </head>
@@ -29,9 +35,7 @@
           </li>
           <li><a href="#" class="nav__link" id="lugares">Lugares</a></li>
           <li>
-            <a
-              href="../pages/login.html"
-              class="principal__link principal__link--header"
+            <a href="login.html" class="principal__link principal__link--header"
               >RESERVAR AHORA</a
             >
           </li>
