Pagina quienes somos integrada

--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -99,87 +99,57 @@
     </header>
     <div class="black-curtain" id="menuOverlay"></div>
     <main class="main_sobre_hotel">
-      <article class="contenedor_total_sb_ht">
-        <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
-          <div class="descripcion_sb_ht">
-            <h1>¿Quiénes somos?</h1>
-            <p>
-              El Ensueño Dorado, fue fundado por un equipo de ocho soñadores que
-              con mucho empeño sumamos nuestras pasiones y conocimientos para
-              crear un hotel único y acogedor en el centro de Barranquilla. Cada
-              uno de nosotros tiene talentos únicos y complementarios. Gracias a
-              esta diversidad, logramos fusionar creatividad, excelencia y
-              calidez en un solo lugar. Tras seis años de esfuerzo, aprendizaje
-              y compromiso, alcanzamos los objetivos que nos propusimos y nos
-              hemos consolidado como un referente de calidad y hospitalidad en
-              el Atlántico. Hoy, El Ensueño Dorado es sinónimo de experiencias
-              memorables, atención personalizada y un espacio donde cada detalle
-              ha sido pensado para brindarte momentos de descanso y placer.
-              Aquí, nuestros huéspedes no solo encuentran un lugar para
-              quedarse, sino un verdadero hogar lejos de casa.
-            </p>
-          </div>
-          <div class="imagen_sb_ht">
-            <img
-              src="../media/imgs/Imagen 1.webp"
-              alt=""
-              class="imagen_sb_int"
-            />
-          </div>
-        </section>
-        <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
-          <div class="descripcion_sb_ht">
-            <h1>Misión</h1>
-            <p>
-              En El Ensueño Dorado, nuestra misión es brindar a nuestros
-              huéspedes un espacio donde puedan sentirse tan acogidos y cómodos
-              como en la casa de sus amigos, combinando la calidez y
-              familiaridad con la elegancia y sofisticación de un palacio de
-              realeza. Nos esforzamos por crear un entorno en el que la
-              modernidad y el diseño impactante se integren armoniosamente con
-              espacios funcionales y cómodos, pensados para satisfacer tanto las
-              necesidades laborales como los momentos de descanso y
-              esparcimiento. Nos comprometemos a ofrecer un servicio
-              excepcional, garantizando a cada visitante una experiencia única,
-              memorable y profundamente gratificante.
-            </p>
-          </div>
-          <div class="imagen_sb_ht">
-            <img
-              src="../media/imgs/Imagen 2.webp"
-              alt=""
-              class="imagen_sb_int"
-            />
-          </div>
-        </section>
-        <section class="caja_sb_ht sombra_sb_ht imagen_centrada">
-          <div class="descripcion_sb_ht">
-            <h1>Visión</h1>
-            <p>
-              En El Ensueño Dorado, soñamos con que para el año 2027 seamos un
-              hotel de referencia en toda la costa Caribe colombiana,
-              reconocidos por nuestra hospitalidad, nuestra excelencia
-              arquitectónica y por el ambiente acogedor que nos distingue.
-              Queremos expandir nuestras instalaciones y abrir nuevas sedes,
-              manteniendo viva la esencia de nuestra marca: un espacio donde el
-              confort y la belleza se combinan para crear experiencias únicas y
-              memorables. Pero no queremos que este sueño sea solo nuestro.
-              Invitamos a nuestros huéspedes a ser parte de este viaje,
-              sumándose a una cultura de conciencia ambiental y cuidado
-              responsable de los recursos. Juntos podemos construir un verdadero
-              hogar en armonía con la naturaleza y con la comunidad que nos
-              rodea.
-            </p>
-          </div>
-          <div class="imagen_sb_ht">
-            <img
-              src="../media/imgs/Imagen 3.webp"
-              alt=""
-              class="imagen_sb_int"
-            />
-          </div>
-        </section>
-      </article>
+      <div class="fondo_sb_h">
+        <h2 class="title__aboutus">¿Quiénes somos?</h2>
+      </div>
+      <div class="adentro">
+        <h3 class="subtitle__aboutus">Sobre nosotros</h3>
+        <p class="description__aboutus">
+          El Ensueño Dorado nació del encuentro de ocho talentos que
+          compartieron una visión: ofrecer un espacio de lujo, calidez y
+          propósito. Después de seis años de dedicación, hoy somos un ícono de
+          hospitalidad en Barranquilla. Aquí, cada detalle está pensado para que
+          te sientas especial, cómodo y, sobre todo, en casa.
+        </p>
+      </div>
+      <img
+        src="../media/imgs/Imagen_decorativa1.webp"
+        alt=""
+        class="imagen_sb_h"
+      />
+
+      <div class="adentro">
+        <h3 class="subtitle__aboutus">Misión</h3>
+        <p class="description__aboutus">
+          En El Ensueño Dorado, combinamos la calidez de un hogar con la
+          elegancia de un palacio. Creamos espacios modernos, cómodos y
+          funcionales, pensados para trabajar, descansar y disfrutar. Nuestra
+          misión es hacer que cada huésped viva una experiencia única, memorable
+          y acogedora.
+        </p>
+      </div>
+      <br />
+      <br />
+      <div class="contiene_linea">
+        <div class="linea_separadora"></div>
+      </div>
+      <div class="contiene_vision">
+        <div class="adentro _final">
+          <h3 class="subtitle__aboutus">Visión</h3>
+          <p class="description__aboutus">
+            Para 2027, queremos ser el hotel referente en la costa Caribe
+            colombiana. Buscamos crecer, abrir nuevas sedes y mantener viva la
+            esencia que nos distingue: hospitalidad, belleza y experiencias
+            memorables. Y lo más importante: queremos que nuestros huéspedes
+            sean parte de este sueño.
+          </p>
+        </div>
+        <img
+          class="imagen_sb_h"
+          src="../media/imgs/Imagen_decorativa2.webp"
+          alt=""
+        />
+      </div>
     </main>
     <footer>
       <section class="footer__content">
