Galeria de habitaciones implementada

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </p>
               <div class="link__room--container">
                 <div class="hr__dark"></div>
-                <button class="propuesta__boton">Ver Habitaciones</button>
+                <a href="./pages/galeria.html" class="propuesta__boton">Ver Habitaciones</a>
               </div>
             </div>
           </article>
