--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galería Habitaciones</title>
+    <link
+      rel="icon"
+      href="../media/imgs/LOGO_HOTEL 4.png"
+      type="image/x-icon"
+    />
+
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body class="galeria">
