--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -11,6 +11,7 @@
     />
 
     <link rel="stylesheet" href="../css/styles.css" />
+    <script src="../scripts/index.js" defer></script>
   </head>
   <body class="galeria">
     <header>
@@ -149,9 +150,9 @@
 
           <div
             class="r-gallery_card"
-            onclick="openModal('../media/rooms/dorado/Familiar1.webp')"
+            onclick="openModal('../media/rooms/Dorado/Familiar1.webp')"
           >
-            <img src="../media/rooms/dorado/Familiar1.webp" alt="Imagen 5" />
+            <img src="../media/rooms/Dorado/Familiar1.webp" alt="Imagen 5" />
             <div class="r-gallery_overlay">
               <div class="r-gallery_overlay-text">Ver más</div>
             </div>
@@ -169,7 +170,7 @@
 
           <div
             class="r-gallery_card"
-            onclick="openModal('../media/rooms/sala1.webp')"
+            onclick="openModal('../media/rooms/Sala1.webp')"
           >
             <img src="../media/rooms/Sala1.webp" alt="Imagen 7" />
             <div class="r-gallery_overlay">
@@ -179,9 +180,9 @@
 
           <div
             class="r-gallery_card"
-            onclick="openModal('../media/rooms/sala2.webp')"
+            onclick="openModal('../media/rooms/Sala2.webp')"
           >
-            <img src="../media/rooms/sala2.webp" alt="Imagen 8" />
+            <img src="../media/rooms/Sala2.webp" alt="Imagen 8" />
             <div class="r-gallery_overlay">
               <div class="r-gallery_overlay-text">Ver más</div>
             </div>
