--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -37,7 +37,10 @@
         </ul>
 
         <!-- Menú que aparece con hover -->
-        <ul class="nav__lista--none display-none" id="listaLugares">
+        <ul
+          class="nav__lista--none nav__lista--none--rooms display-none"
+          id="listaLugares"
+        >
           <li><a href="restaurante.html" class="nav__link">Restaurantes</a></li>
           <hr />
           <li><a href="eventos.html" class="nav__link">Eventos</a></li>
