Ruta habitaciones modificada

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               diseñadas —Clásica, Ejecutiva o Cabaña— pensadas para ofrecerte
               una estancia inigualable.
             </p>
-            <a href="./pages/habitaciones.html" class="service__button" aria-label="Más sobre habitaciones">
+            <a href="./pages/login.html" class="service__button" aria-label="Más sobre habitaciones">
               →
             </a>
           </div>
